solve some more leetcode