@@ -1,9 +1,6 @@
 package com.priyakdey;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 
 /**
  * @author Priyak Dey
@@ -12,10 +9,19 @@ public class P0734 {
 
     public boolean areSentencesSimilar(String[] sentence1, String[] sentence2,
                                        List<List<String>> similarPairs) {
-        Map<String, String> map = new HashMap<>();
+        Map<String, Set<String>> map = new HashMap<>();
         for (List<String> similarPair : similarPairs) {
-            map.put(similarPair.get(0), similarPair.get(1));
-            map.put(similarPair.get(1), similarPair.get(0));
+            String word1 = similarPair.getFirst();
+            String word2 = similarPair.getLast();
+            if (!map.containsKey(word1)) {
+                map.put(word1, new HashSet<>());
+            }
+            map.get(word1).add(word2);
+
+            if (!map.containsKey(word2)) {
+                map.put(word2, new HashSet<>());
+            }
+            map.get(word2).add(word1);
         }
 
         if (sentence1.length != sentence2.length) return false;
@@ -24,11 +30,13 @@ public class P0734 {
             String word1 = sentence1[i];
             String word2 = sentence2[i];
 
-            if (!Objects.equals(word1, word2) && !Objects.equals(map.get(word1), word2)
-                    && !Objects.equals(map.get(word2), word1)) {
-                return false;
-            }
+            if (Objects.equals(word1, word2)) continue;
+            if (map.containsKey(word1) && map.get(word1).contains(word2)) continue;
+            if (map.containsKey(word2) && map.get(word2).contains(word1)) continue;
+
+            return false;
         }
+
 
         return true;
     }
